ajustes na agenda calendario

--- a/src/app/pages/gestao-paciente/dependente/dependente.component.html
+++ b/src/app/pages/gestao-paciente/dependente/dependente.component.html
@@ -146,7 +146,7 @@
                           <p class="card-text">Tipo do Sangue: {{ row.bloodType }}</p>
               
                           <div class="datatable-body-box-actions">
-                            <button class="btn edit-icon pt-4" (click)="cadastrar(row)" title="Editar Cadastro">
+                            <button class="btn edit-icon pt-4" (click)="EditarDependente(row)" title="Editar Cadastro">
                               <i class="fas fa-pencil-alt" aria-label="Editar Cadastro"></i>
                             </button>
                           </div>
