--- a/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
+++ b/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
@@ -93,7 +93,7 @@
                     <div class="form-group pt-4">
                       <div class="text-right">
                         <button class="btn btn-primary mr-2 button"
-                          (click)="buscarAtendimento(formBuscarAtendimento.value,true)" [disabled]="isBlock">
+                          (click)="buscarAtendimento(formBuscarAtendimento.value,true)">
                           Pesquisar
                         </button>
                         <button class="btn btn-success ml-2 button" (click)="agendarAtendimento()">
