--- a/src/app/pages/gestao-paciente/dependente/dependente.component.html
+++ b/src/app/pages/gestao-paciente/dependente/dependente.component.html
@@ -149,6 +149,10 @@
                             <button class="btn edit-icon pt-4" (click)="EditarDependente(row)" title="Editar Cadastro">
                               <i class="fas fa-pencil-alt" aria-label="Editar Cadastro"></i>
                             </button>
+
+                            <button class="btn edit-icon pt-4" (click)="buscaAgenda(row)" title="Visualizar Atendimentos">
+                              <i class="fas fa-list" aria-label="Visualizar Atendimentos"></i>
+                            </button>
                           </div>
                         </nb-card-body>
                       </nb-card>
