--- a/src/app/pages/gestao-paciente/paciente/paciente.component.html
+++ b/src/app/pages/gestao-paciente/paciente/paciente.component.html
@@ -84,6 +84,9 @@
                                           <button class="btn home-icon pt-4" (click)="buscaHistorico(row)" title="Visualizar histórico">
                                             <i class="fas fa-history" aria-label="Visualizar histórico"></i>
                                           </button>
+                                          <button class="btn home-icon pt-4" (click)="buscaAgenda(row)" title="Visualizar Agenda">
+                                            <i class="fas fa-list" aria-label="Visualizar Agenda"></i>
+                                          </button>
                                         </div>
                                                                                 
                                     </nb-card-body>
