--- a/src/app/pages/gestao-paciente/visualizar-AgendaHistorico/visualizar-AgendaHistorico.component.scss
+++ b/src/app/pages/gestao-paciente/visualizar-AgendaHistorico/visualizar-AgendaHistorico.component.scss
@@ -1,3 +1,52 @@
+nb-card-body {
+    overflow: visible;
+    padding-top: 0;
+  
+    > * {
+      margin-top: 1rem;
+    }
+  }
+  
+  .full-name-inputs,
+  .validation-checkboxes {
+    display: flex;
+    margin: 0 -0.5rem;
+  
+    > * {
+      margin: 0 0.5rem;
+    }
+  }
+  
+  .checkbox-radio {
+    display: flex;
+  }
+
+  .avatar {
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    object-fit: cover; /* Garante que a imagem preencha o espaço do avatar */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra suave */
+  }
+  
+  .demo-items {
+    flex: 1 0 33%;
+  }
+  
+  .date{
+    display: flex;
+    height: 40px;
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .div-radio{
+    display: flex;
+    margin-top: 5px;
+  }
+
+  
 @import '../../../@theme/styles/themes';
 
 @include nb-install-component() {
@@ -90,48 +139,10 @@
   border: none !important;
 }
 
-.card-pendente {
-  background-color: #0894f142;
-  /* Outros estilos para o card cinza, se necessário */
-}
-.card-bloqueado {
-  background-color: #d613f02c;
-  /* Outros estilos para o card cinza, se necessário */
-}
-
-.card-livre{
-background-color: #07c28373;
-/* Outros estilos para o card cinza, se necessário */
-}
-
 :host ::ng-deep .ngx-datatable.bootstrap .datatable-body .datatable-body-box-actions .btn:focus{
   outline: none !important;
   box-shadow: none !important;
 }
-
-/* Estilo padrão para dispositivos não móveis */
-.card {
-  height: auto;
-}
-
-/* Estilo para dispositivos móveis com largura de tela menor que 768px */
-@media (max-width: 820px) {
-  .card {
-    height: auto;
-  }
-}
-
-.button {
-  margin-top: 5px;
-}
-
-/* Estilos específicos para telas com largura máxima de 768px (dispositivos móveis) */
-@media screen and (max-width: 768px) {
-  .button {
-    margin-top: 20px; /* Reduz a margem para 0 em telas móveis */
-  }
-}
-
 
 :host ::ng-deep .ngx-datatable.bootstrap .datatable-body .datatable-body-box-actions .btn:hover{
   text-decoration: none;
@@ -198,24 +209,12 @@ background-color: #07c28373;
 nb-checkbox {
     margin-bottom: 1rem;
   }
-
+  
   .form-inline [fullWidth] {
     flex: 1;
   }
-
+  
   .form-inline > * {
     margin: 0 1.5rem 1.5rem 0;
   }
-
-  nb-card.inline-form-card nb-card-body {
-    padding-bottom: 0;
-  }
-
-@include nb-install-component() {
-
-    display: block;
-    flex: 1;
-    position: relative;
-
-  }
-
+  
