--- a/src/app/pages/visualizar-agenda/agenda/agenda.component.html
+++ b/src/app/pages/visualizar-agenda/agenda/agenda.component.html
@@ -49,45 +49,41 @@
             </form>
             <div class="col-md-12 col-xs-12">
 
+              
+              <h5>Legenda:</h5>
+              <div class="legend d-flex">
+                <div class="legenda-item">
+                  <div class="cor-box" style="background-color: coral;"></div>
+                  <span>Aguardando Aprovação </span>
+                </div>
+                <div class="legenda-item">
+                  <div class="cor-box" style="background-color: orange;"></div>
+                  <span>Consulta Não Confirmada </span>
+                </div>
+                <div class="legenda-item">
+                  <div class="cor-box" style="background-color: red;"></div>
+                  <span>Aguardando Pagamento </span>
+                </div>
+                <div class="legenda-item">
+                  <div class="cor-box" style="background-color: green;"></div>
+                  <span>Consulta Confirmada </span>
+                </div>
+                <div class="legenda-item">
+                  <div class="cor-box" style="background-color: blue;"></div>
+                  <span>Consulta Finalizada </span>
+                </div>
+              </div>
+              
+              
+
               <div class='form group demo-app-sidebar '>
                 <full-calendar *ngIf='calendarVisible' [options]='calendarOptions' [plugins]="calendarPlugins"
                   [initialView]="'timeGridWeek'" [events]="calendarEvents">
                 </full-calendar>
               </div>
-              <h6>Legenda de Cores para Status de Eventos</h6>
-              <div class="legenda-item">
-                <div class="cor-box" style="background-color: coral;"></div>
-                <span>Aguardando Aprovação</span>
-              </div>
-              <div class="legenda-item">
-                <div class="cor-box" style="background-color: red;"></div>
-                <span>Aguardando Pagamento</span>
-              </div>
-              <div class="legenda-item">
-                <div class="cor-box" style="background-color: green;"></div>
-                <span>Consulta Confirmada</span>
-              </div>
-              <div class="legenda-item">
-                <div class="cor-box" style="background-color: blue;"></div>
-                <span>Consulta Finalizada</span>
-              </div>
-
             </div>
           </nb-card-body>
         </nb-card>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div #card>
-  <div class="col-md-12 col-xs-12">
-    <div class="row" *ngIf="isActive" class="loader">
-      <div class="text-center" style="margin-top: -1300px;margin-right: 80px;">
-        <button class="btn btn-primary" type="button" disabled>
-          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-          Carregando...
-        </button>
       </div>
     </div>
   </div>
