--- a/src/app/pages/visualizar-agenda/agenda/agenda.component.html
+++ b/src/app/pages/visualizar-agenda/agenda/agenda.component.html
@@ -49,9 +49,8 @@
             </form>
             <div class="col-md-12 col-xs-12">
 
-              
               <h5>Legenda:</h5>
-              <div class="legend d-flex">
+              <div class="legend d-flex flex-wrap">
                 <div class="legenda-item">
                   <div class="cor-box" style="background-color: coral;"></div>
                   <span>Aguardando Aprovação </span>
