--- a/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
+++ b/src/app/pages/atendimento/buscar-atendimento/buscar-atendimento.component.html
@@ -110,24 +110,27 @@
               </div>
 
               <h5>Legenda:</h5>
-              <div class="legend d-flex">
-                <p class="mr-3">
-                  <i class="fa fa-info-circle text-primary"></i> Detalhe Do Atendimento
-                </p>
-                <p class="mr-3">
-                  <i class="fa fa-wifi text-success"></i> Iniciar Atendimento
-                </p>
-                <p class="mr-3">
-                  <i class="fa fa-video text-danger"></i> Iniciar Video Atendimento
-                </p>
-                <p class="mr-3">
-                  <i class="fa fa-key text-danger"></i> Desbloquear Horário
-                </p>
-                <p>
-                  <i class="fa fa-clock text-danger"></i> Confirmar Horário
-                </p>
+              <div class="col-md-12 col-xs-12">
+                <div class="row">
+                  <div class="legend d-flex flex-wrap">
+                    <p class="mr-3 mb-2">
+                      <i class="fa fa-info-circle text-primary"></i> Detalhe Do Atendimento
+                    </p>
+                    <p class="mr-3 mb-2">
+                      <i class="fa fa-wifi text-success"></i> Iniciar Atendimento
+                    </p>
+                    <p class="mr-3 mb-2">
+                      <i class="fa fa-video text-danger"></i> Iniciar Video Atendimento
+                    </p>
+                    <p class="mr-3 mb-2">
+                      <i class="fa fa-key text-danger"></i> Desbloquear Horário
+                    </p>
+                    <p class="mb-2">
+                      <i class="fa fa-clock text-danger"></i> Confirmar Horário
+                    </p>
+                  </div>
+                </div>
               </div>
-              
               
 
 
