--- a/src/app/pages/configurar-agenda/configurar-excecao-atendimento/configurar-excecao-atendimento.component.html
+++ b/src/app/pages/configurar-agenda/configurar-excecao-atendimento/configurar-excecao-atendimento.component.html
@@ -7,12 +7,12 @@
             <form id="form-configurar-excecao-atendimento" [formGroup]="formExcecaoAtendimento">
               <div class="col-md-12 col-xs-12">
                 <div class="form-group col-md-6">
-                  <h5 class="ml-lg-n3">Exceção de Atendimento</h5>
+                  <h5 class="ml-lg-n3">Configurar Exceção de Horários</h5>
                 </div>
                 <div class="form-row align-items-center">
                   <div class="form-group col-md-4">
                     <div class="form-group">
-                      <label for="nome">Escolha o médico*</label>
+                      <label for="nome">Escolha o Médico*</label>
                       <select class="form-control" formControlName="medico"
                         (change)="verificaMedico($event.target.value)">
                         <option value="null" selected>SELECIONE</option>
@@ -24,7 +24,7 @@
                   <div class="form-group col-md-3">
                     <div class="form-group">
                       <div class="div-clinica">
-                        <label for="clinica">Escolha a clínica*</label>
+                        <label for="clinica">Escolha a Clínica*</label>
                         <select class="form-control" formControlName="clinica"
                           (change)="verificaClinica($event.target.value)">
                           <option value="null" selected>SELECIONE</option>
@@ -36,7 +36,7 @@
                   </div>
                   <div class="form-group col-md-4">
                     <div class="form-group">
-                      <label for="tipoConsulta">Tipo de consulta*</label>
+                      <label for="tipoConsulta">Tipo de Consulta*</label>
                       <select class="form-control" formControlName="tipoConsulta">
                         <option value="null" selected>SELECIONE</option>
                         <option *ngFor="let tipoConsulta of listTipoConsulta" value="{{ tipoConsulta.id }}">{{
@@ -55,7 +55,7 @@
                   </div>
                   <div class="form-group col-md-3">
                     <div class="form-group pl-3">
-                      <label class="div-expediente">Terá expediente*</label>
+                      <label class="div-expediente">Terá Expediente*</label>
                       <div class="row pl-3">
                         <label class="radio-inline mr-3">
                           <input class="mat-button" type="radio" id="radio" name="optradio" value="S"
@@ -109,84 +109,40 @@
                     </div>
                   </section>
                 </nb-card-body>
-                <div class="form-row align-items-center">
-                  <div class="form-group col-md-12">
-                    <div class="app-box">
-                      <ngx-datatable #myTable class="bootstrap" [rows]="rowData" [columnMode]="'force'"
-                        [headerHeight]="35" [footerHeight]="50" [rowHeight]="'auto'"
-                        [messages]="{emptyMessage: 'Sem dados...'}" [limit]="8">
-                        <ngx-datatable-column name="Nome" prop="nome">
-                          <ng-template ngx-datatable-cell-template let-row="row">
+
+                <div class="form-group col-md-6">
+                  <h5 class="ml-lg-n3">Exceções Configuradas:</h5>
+                </div>
+                
+                <div class="container">
+                  <div class="row">
+                    <div class="col-md-4" *ngFor="let row of rowData">
+                      <nb-card>
+                        <nb-card-body>
+                          <div>
+                            <p><strong>Nome Clínica:</strong> {{ row.nomeClinica }}</p>
+                            <p><strong>Nome do Médico:</strong> {{ row.nome }}</p>
+                            <p><strong>Data:</strong> {{ row.data }}</p>
+                            <p><strong>Hora Início:</strong> {{ row.horaInicio }}</p>
+                            <p><strong>Hora Fim:</strong> {{ row.horaFim }}</p>
+                            <p><strong>Modalidade da Exceção: </strong> {{ row.description }}</p>
                             <div class="text-center">
-                              {{ row.nome }}
+                            <button class="btn btn-danger" (click)="deletar(row.id)">
+                              Excluir
+                            </button>
                             </div>
-                          </ng-template>
-                        </ngx-datatable-column>
-                        <ngx-datatable-column name="Nome Clinica" prop="Nome Clinica">
-                          <ng-template ngx-datatable-cell-template let-row="row">
-                            <div class="text-center">
-                              {{ row.name }}
-                            </div>
-                          </ng-template>
-                        </ngx-datatable-column>
-                        <ngx-datatable-column name="Data" prop="data">
-                          <ng-template ngx-datatable-cell-template let-row="row">
-                            <div class="text-center">
-                              {{ row.data }}
-                            </div>
-                          </ng-template>
-                        </ngx-datatable-column>
-                        <ngx-datatable-column name="Hora Início" prop="horaInicio">
-                          <ng-template ngx-datatable-cell-template let-row="row">
-                            <div class="text-center">
-                              {{ row.horaInicio }}
-                            </div>
-                          </ng-template>
-                        </ngx-datatable-column>
-                        <ngx-datatable-column name="Hora Fim" prop="horaFim">
-                          <ng-template ngx-datatable-cell-template let-row="row">
-                            <div class="text-center">
-                              {{ row.horaFim }}
-                            </div>
-                          </ng-template>
-                        </ngx-datatable-column>
-                        <ngx-datatable-footer>
-                          <ng-template ngx-datatable-footer-template let-rowCount="rowCount" let-pageSize="pageSize"
-                            let-selectedCount="selectedCount" let-curPage="curPage" let-offset="offset">
-                            <div>
-                              <div class="page-count">
-                                Total de Registros: {{rowCount}}
-                              </div>
-                            </div>
-                            <datatable-pager [pagerLeftArrowIcon]="'fa fa-angle-double-left'"
-                              [pagerRightArrowIcon]="'fa fa-angle-double-right '"
-                              [pagerPreviousIcon]="'fa fa-angle-left'" [pagerNextIcon]="'fa fa-angle-right '"
-                              [page]="curPage" [size]="pageSize" [count]="rowCount"
-                              [hidden]="!((rowCount / pageSize) > 1)" (change)="myTable.onFooterPage($event)">
-                            </datatable-pager>
-                          </ng-template>
-                        </ngx-datatable-footer>
-                      </ngx-datatable>
+                          </div>
+                        </nb-card-body>
+                      </nb-card>
                     </div>
                   </div>
                 </div>
+                
+
               </div>
             </form>
           </nb-card-body>
         </nb-card>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div #card>
-  <div class="col-md-12 col-xs-12">
-    <div class="row" *ngIf="isActive" class="loader">
-      <div class="text-center" style="margin-top: -300px;margin-right: 40px;">
-        <button class="btn btn-primary" type="button" disabled>
-          <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-          Carregando...
-        </button>
       </div>
     </div>
   </div>
