--- a/src/app/pages/atendimento/novo-atendimento/novo-atendimento.component.html
+++ b/src/app/pages/atendimento/novo-atendimento/novo-atendimento.component.html
@@ -84,6 +84,12 @@
                                     <div class="form-row">
 
                                     <div class="form-group col-md-4">
+                                        <label for="dataInicio">Informe a Data da Consulta*</label>
+                                        <input class="form-control date" type="date" id="dataInicio"
+                                            name="mydate" formControlName="dataInicio" maxlength="10" />
+                                    </div>
+                                    
+                                    <div class="form-group col-md-4">
                                         <label class="encaixe">Deseja Realizar um Encaixe?*</label>
                                         <div class="p-1 row mb-lg-n1">
                                             <label class="radio-inline pl-3">
@@ -98,11 +104,7 @@
                                             </label>
                                         </div>
                                     </div>
-                                    <div class="form-group col-md-4">
-                                        <label for="dataInicio">Informe a Data da Consulta*</label>
-                                        <input class="form-control date" type="date" id="dataInicio"
-                                            name="mydate" formControlName="dataInicio" maxlength="10" />
-                                    </div>
+
                                     <div class="form-group col-md-4 text-right" *ngIf="isEncaixe">
                                     <button class="btn btn-primary m-4" (click)="pesquisarConsulta(formNovoAtendimento.value)">
                                             Pesquisar
@@ -351,11 +353,12 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-row align-items-center" *ngIf="isDadosAtendimento">
+                                    <div class="form-row align-items-center">
                                         <div class="col-md-12">
-                                            <div class="text-right" >
+                                            <div class="text-right">
                                                 <button class="btn btn-success"
-                                                    (click)="salvar(formNovoAtendimento.value)" >
+                                                    (click)="salvar(formNovoAtendimento.value)"
+                                                    [disabled]="bloqueioSave">
                                                     Salvar
                                                 </button>
                                             </div>
